--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -133,6 +133,7 @@ Changes since 1.3.0
   (Bernhard).
 - Adjusted various setups for the suspension code changes (Bernhard).
 - Regenerated configure, adopted in files to autoconf changes (Bernhard).
+- Updated vc++ 6.0 project files and bat scripts (Bernhard).
 
 
 
