--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -140,6 +140,11 @@ Changes since 1.3.0
 - Added texture for inferno 9 (Andrew), tita 9 (Miguel Martinez), inferno 3
   and 8 (Wolf-Dieter), berniw 7, inferno 7, bt 7, damned 7, olethros 7
   (Bernhard), (Andrew, Miguel, Wolf-Dieter, Bernhard).
+- Created and added lots of textures for trb1 opponents (Bernhard).
+- Updated bat files to deploy textures (Bernhard).
+- Reintroduced Olethros on Windows, adjusted project dependencies and made
+  code compile (Bernhard).
+
 
 
 
