--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -147,6 +147,8 @@ Changes since 1.3.0
 - Adjusted race modes, take existing cars and tracks (Bernhard).
 - Adjusted preset driver "Player" (Bernhard).
 - Set steer speed to 360 on the trb1 cars (Bernhard).
+- Fit background images without distortion, background image aspect ratio is
+  16:10 (Bernhard).
 
 
 
