--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -154,6 +154,7 @@ Changes since 1.3.0
 - Added splash screen created by Eckhard M. Jäger (Eckhard, Bernhard).
 - Do not call anymore GfuiIdle for ordinary menus/screens to save power and
   avoid annoying high frequency noise from graphics hardware (Bernhard).
+- Redone camera placemant of alpine-1 (Bernhard).
 
 
 TODO for 1.4.0
