--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -146,7 +146,7 @@ Changes since 1.3.0
   code compile (Bernhard).
 - Adjusted race modes, take existing cars and tracks (Bernhard).
 - Adjusted preset driver "Player" (Bernhard).
-- Set steer speed to 360 on the trb1 cars (Bernhard).
+- Set steer speed to 360 Deg/s on the trb1 cars (Bernhard).
 - Fit background images without distortion, background image aspect ratio is
   16:10 (Bernhard).
 - Created new background images (Bernhard).
@@ -155,6 +155,10 @@ Changes since 1.3.0
 - Do not call anymore GfuiIdle for ordinary menus/screens to save power and
   avoid annoying high frequency noise from graphics hardware (Bernhard).
 - Redone camera placemant of alpine-1 (Bernhard).
+- Fixed trackgen not accepting -H option under posix builds (Bernhard).
+- Fixed trackgen not building the elevation 3 map (Bernhard).
+- Equalized author name formatting for tracks (Bernhard).
+- Replaced forza track selection image with a track map (Bernhard).
 
 
 TODO for 1.4.0
