--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -12,7 +12,6 @@ Here the list with the directories containing non free content, look at the
 readme.txt for details:
 - data/cars/models/pw-*
 - data/cars/models/kc-*
-- data/cars/models/vm-*
 
 
 Linux Installation from Source
@@ -154,13 +153,14 @@ Changes since 1.3.0
 - Added splash screen created by Eckhard M. Jäger (Eckhard, Bernhard).
 - Do not call anymore GfuiIdle for ordinary menus/screens to save power and
   avoid annoying high frequency noise from graphics hardware (Bernhard).
-- Redone camera placemant of alpine-1 (Bernhard).
+- Redone camera placement of alpine-1 (Bernhard).
 - Fixed trackgen not accepting -H option under posix builds (Bernhard).
 - Fixed trackgen not building the elevation 3 map (Bernhard).
 - Equalized author name formatting for tracks (Bernhard).
 - Replaced forza track selection image with a track map (Bernhard).
 - Added new background image and color settings to track alpine-1, created
   by Eckhard M. Jäger (Eckhard, Bernhard).
+- Fixed wrong texture size constant in openglconfg.cpp (Bernhard).
 
 
 TODO for 1.4.0
@@ -190,13 +190,10 @@ Later:
 - make trackgen generate two sides for barriers and use just one sided
   polygons (better diffuse lighting).
 - fix sound in split screen multiplayer. [in progress] (ask Christos).
-- Add remaining kcendra cars.
 - Ongoing: Replace some defines with "static const" to be able to see the
   symbol name when debugging.
 - move berniw/bt spline code into math to share it.
 - hunt down all glGet* crap during the simulation.
-- check all textures for the user selectable cars, they should be nicer.
-
 - (Problem when driver list changes during championship.)
 - (add proper init/shutdown to every module which is not bound to anything else
   but the loading/init/shutdown/unloading process.)
