--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -165,6 +165,11 @@ Changes since 1.3.0
   (Bernhard).
 - Added new light definitions for trb cars, created by Wolf-Dieter
   (Wolf-Dieter, Bernhard).
+- Updated installer for Windows (Bernhard).
+- Fixed empty -L option in configure.in, suggested by Jean-Philippe Meuret
+  (Jean-Philippe Meuret, Bernhard).
+- Reduced number of packages (make packages) (Bernhard).
+
 
 
 TODO for 1.4.0
