--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -172,12 +172,35 @@ Changes since 1.3.0
 
 
 
+TODO for 1.3.2
+--------------
+- This is intended as GCC compiler warning fix release. Fixing this warnings
+  will break the binary interface compatibility, that is the reason why I did
+  it not in 1.3.1. Maybe this will be no official release, we will see...
+- Rename *1 category/car (get rid of "*1")
+- Rename *ascar category/car (get rid of *acsar)
+
+
+
 TODO for 1.4.0
 --------------
 - Adjust categories.
 - Apply SDL patch from Brian Gavin (rescheduled to 1.4.0 to get to to test
   seriously).
 - Update OpenAL to 1.1, fix use of deprecated stuff.
+- Move from VC++ 6.0 to 9.0 (VS2008)
+
+
+
+TODO for Compliance
+-------------------
+155-DTM -> replace with car8-trb1
+acura -> replace with car9-trb1
+mc-larenf1 -> replace with car10-trb1
+sc-f1 -> replace with car1-ow1 (would be nice to have ~5 different cars)
+nascar -> replace with car1-stock1 (would be nice to have ~5 different cars)
+p406 -> replace with car1-trb4
+
 
 
 Later:
