--- a/torcs/torcs/installer/loki/README
+++ b/torcs/torcs/installer/loki/README
@@ -1,9 +1,9 @@
 Licenses
 --------
 Be aware of that not the whole TORCS distribution content has the same
-license. Especially the cars in the cars/kc-*, cars/pw-* and cars/vm-*
-directories have special licenses, have a look at them. The rest of the
-distribution is licensed according the GPL and the Free Art License.
+license. Especially the cars in the cars/kc-* and cars/pw-* directories
+have special licenses, have a look at them. The rest of the distribution
+is licensed according the GPL and the Free Art License.
 
 TORCS Requirements
 ------------------
@@ -15,7 +15,7 @@ graphics drivers.
 Running TORCS
 -------------
 - Read the "How-To Drive" on www.torcs.org
-  (http://torcs.sourceforge.net/sections.php?op=viewarticle&artid=10).
+  (http://torcs.sourceforge.net/index.php?name=Sections&op=viewarticle&artid=10).
 - Press F1 anytime to get help (do it as well during the ride to learn about
   the options).
 - Read the FAQ to learn about split screen multiplayer and more.
@@ -36,13 +36,15 @@ robot tutorial chapter 5
 
 Creating Tracks
 ---------------
-There is a track editor in development, have a look at
-http://katergo.rege.org/projects/trackeditor.
+There is a track editor in development, get it from
+http://sourceforge.net/projects/trackeditor or
+http://www.berniw.org/trb/download/trackeditor-0.6.2c.tar.bz2.
+The sources are included in the jars.
 
-Robot programming
+Robot Programming
 -----------------
 You find a robot programming tutorial on www.berniw.org in the TORCS section.
 
-Robot racing
-------------
+Official Championships
+----------------------
 Visit www.berniw.org/trb for more information.
