--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -99,6 +99,8 @@ Changes since 1.3.1-test1
   Andrew, Bernhard).
 - Changed version to 1.3.1 (Bernhard).
 - Fixed #1674545 (Bernhard).
+- Replaced track dirt-1 with upgrade from Eckhard (Eckhard, Bernhard).
+- Corrected mipmapping/transparency behaviour of new dirt-1 track (Bernhard).
 
 
 Changes since 1.3.0
