--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -95,6 +95,7 @@ Changes since 1.3.1
 - Just load ssggraph once to avoid weird crashes when going back to the options
   menu and coming back to the race (just Linux was affected, the Windows
   version does not work the same way concerning this) (Bernhard).
+- Applied corrections suggested by Kim Oldfield to the robot tutorial (Kim, Bernhard).
 
 
 TODO for 1.3.2
