--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -96,6 +96,7 @@ Changes since 1.3.1
   menu and coming back to the race (just Linux was affected, the Windows
   version does not work the same way concerning this) (Bernhard).
 - Applied corrections suggested by Kim Oldfield to the robot tutorial (Kim, Bernhard).
+- Adopted trb result submission for 1.3.1 (Bernhard).
 
 
 TODO for 1.3.2
