--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -97,6 +97,9 @@ Changes since 1.3.1
   version does not work the same way concerning this) (Bernhard).
 - Applied corrections suggested by Kim Oldfield to the robot tutorial (Kim, Bernhard).
 - Adopted trb result submission for 1.3.1 (Bernhard).
+- Adopted trb result submission for new PHP DOM version (Bernhard).
+- Fixed minor trb bug which showed/labeled links to Signin/remove teams during the
+  race phase (Bernhard).
 
 
 TODO for 1.3.2
