--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -96,10 +96,13 @@ Changes since 1.3.1
   menu and coming back to the race (just Linux was affected, the Windows
   version does not work the same way concerning this) (Bernhard).
 - Applied corrections suggested by Kim Oldfield to the robot tutorial (Kim, Bernhard).
-- Adopted trb result submission for 1.3.1 (Bernhard).
-- Adopted trb result submission for new PHP DOM version (Bernhard).
-- Fixed minor trb bug which showed/labeled links to Signin/remove teams during the
+- Adopted TRB result submission for 1.3.1 (Bernhard).
+- Adopted TRB result submission for new PHP DOM version (Bernhard).
+- Fixed minor TRB bug which showed/labeled links to Signin/remove teams during the
   race phase (Bernhard).
+- Replaced hardcoded upload limit in TRB with configuration parameter (Bernhard).
+- Bumped TRB version number to 0.0.2 (Bernhard).
+- Commited TRB creation of indices (Bernhard).
 
 
 TODO for 1.3.2
