--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -103,6 +103,8 @@ Changes since 1.3.1
 - Replaced hardcoded upload limit in TRB with configuration parameter (Bernhard).
 - Bumped TRB version number to 0.0.2 (Bernhard).
 - Commited TRB creation of indices (Bernhard).
+- Adjustments to car3-trb1 to make it more competitive (Bernhard).
+- Added new car8-trb1 (Bernhard).
 
 
 TODO for 1.3.2
