--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -94,7 +94,7 @@ Changes since 1.3.1
 - Fixed remaining const char* gcc 4.3 warnings (Bernhard).
 - Just load ssggraph once to avoid weird crashes when going back to the options
   menu and coming back to the race (just Linux was affected, the Windows
-  version does not work the same way concerning this) (Bernhard).
+  version does not work the same way regarding this) (Bernhard).
 - Applied corrections suggested by Kim Oldfield to the robot tutorial (Kim, Bernhard).
 - Adopted TRB result submission for 1.3.1 (Bernhard).
 - Adopted TRB result submission for new PHP DOM version (Bernhard).
@@ -105,6 +105,10 @@ Changes since 1.3.1
 - Commited TRB creation of indices (Bernhard).
 - Adjustments to car3-trb1 to make it more competitive (Bernhard).
 - Added new car8-trb1 (Bernhard).
+- Reduce front car advantage in slipstreaming scenarios (Bernhard).
+- Ground effect drop off more dramatic when airflow comes sideways, no ground
+  effect anymore when driving reverse (Bernhard).
+- Increased Cd (drag coefficient) for car1-trb1 (Bernhard).
 
 
 TODO for 1.3.2
