--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -119,6 +119,7 @@ Changes since 1.3.1
   (Eric, Bernhard).
 - Do not try to load wheels when configuration is missing (Bernhard).
 - Added Erics wheels for sc-f1 with modified texture/configuration (Eric, Bernhard).
+- Fixed wrong scaling of steering input display (Bernhard).
 
 
 
