--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -114,20 +114,21 @@ Changes since 1.3.1
   "Graphic Objects" section you can define "3d wheel directory" (e.g. "mywheel-1")
   and "3d wheel basename" (e.g. "mywheel"), then TORCS tries to load
   "wheels/mywheel-1/mywheel?.acc", where ? is 0..3 for different rotation rates.
-  Later we could also move the wheel only specific similation properties into
-  and xml belonging to the wheel.
-  (Eric, Bernhard).
+  Later we could also move the wheel only specific simulation properties into
+  an xml belonging to the wheel (Eric, Bernhard).
 - Do not try to load wheels when configuration is missing (Bernhard).
 - Added Erics wheels for sc-f1 with modified texture/configuration (Eric, Bernhard).
 - Fixed wrong scaling of steering input display (Bernhard).
 - Created new car category for trb1, moved initially trb1 cars into it (Bernhard).
 - Improved moment calculations for aerodynamic forces (Bernhard).
 - Default setup adjustments for trb1 cars (Bernhard).
+- Created new trb3 category, assigned car1-trb3 to it (Bernhard).
+- Created new category ow1, moved sc-f* to car1-ow1 (Bernhard).
+
 
 
 TODO for 1.3.2
 --------------
-- Rename *1 category/car (get rid of "*1")
 - Rename *ascar category/car (get rid of *acsar)
 
 
@@ -147,7 +148,6 @@ TODO for Compliance
 155-DTM -> replace with car8-trb1
 acura -> replace with car9-trb1
 mc-larenf1 -> replace with car10-trb1
-sc-f1 -> replace with car1-ow1 (would be nice to have ~5 different cars)
 nascar -> replace with car1-stock1 (would be nice to have ~5 different cars)
 p406 -> replace with car1-trb4
 
