--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -124,12 +124,17 @@ Changes since 1.3.1
 - Default setup adjustments for trb1 cars (Bernhard).
 - Created new trb3 category, assigned car1-trb3 to it (Bernhard).
 - Created new category ow1, moved sc-f* to car1-ow1 (Bernhard).
+- Adopted Windows port to changes (car categories, wheels, etc.) (Bernhard).
+- Bumped version to 1.3.2-test1 (Bernhard).
 
 
 
 TODO for 1.3.2
 --------------
 - Rename *ascar category/car (get rid of *acsar)
+- Menu sound
+- New wheels for trb1/3 cars
+- Some adoptions for gamepad calibration
 
 
 
