--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -126,6 +126,7 @@ Changes since 1.3.1
 - Created new category ow1, moved sc-f* to car1-ow1 (Bernhard).
 - Adopted Windows port to changes (car categories, wheels, etc.) (Bernhard).
 - Bumped version to 1.3.2-test1 (Bernhard).
+- Created new wheel trb1-1 (Bernhard).
 
 
 
@@ -140,7 +141,6 @@ TODO for 1.3.2
 
 TODO for 1.4.0
 --------------
-- Adjust categories.
 - Apply SDL patch from Brian Gavin (rescheduled to 1.4.0 to get to to test
   seriously).
 - Update OpenAL to 1.1, fix use of deprecated stuff.
