--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -37,16 +37,17 @@ Command line arguments:
 * -m use X mouse cursor and do not hide it during races
 
 
-Windows Installation from Source (Release)
-------------------------------------------
+Windows Installation from Source (Release version)
+--------------------------------------------------
 - hint: you can have a release and a debug build side by side, the release
   version goes to "runtime" and the debug to "runtimed".
-- requires VC++ 6.0 (tested with sp6)
+- requires VS 6 (tested with sp6) or VS 2008 (tested with sp1)
 - untar the archive into a path without whitespaces and special characters.
 - cd into the torcs-1.3.1 directory
 - run setup_win32.bat
 - run setup_win32-data-from-CVS.bat
-- select the TORCS project and the w32-Release version
+- select the TORCS workspace (TORCS.dsw for VS 6) or solution (TORCS.sln
+  for VS 2008), select the w32-Release version.
 - compile project (0 warnings)
 - cd into the "runtime" directory.
 - run "wtorcs.exe"
@@ -56,12 +57,13 @@ Windows Installation from Source (Debug version)
 ------------------------------------------------
 - hint: you can have a debug and a release build side by side, the debug
   version goes to "runtimed" and the release to "runtime".
-- requires VC++ 6.0 (tested with sp6)
+- requires VS 6 (tested with sp6) or VS 2008 (tested with sp1)
 - untar the archive into a path without whitespaces and special characters.
 - cd into the torcs-1.3.1 directory
 - run setup_win32_debug.bat
 - run setup_win32-data-from-CVS_debug.bat
-- select the TORCS project and the w32-Debug version
+- select the TORCS workspace (TORCS.dsw for VS 6) or solution (TORCS.sln
+  for VS 2008), select the w32-Debug version
 - compile project (0 warnings)
 - cd into the "runtimed" directory.
 - run "wtorcs.exe"
@@ -107,6 +109,11 @@ Changes since 1.3.1-test1
   (paletta, Bernhard).
 - Report #2784518, applied/tested, provided by Hamid Homatash (Hamid, Bernhard).
 - Fixed possible buffer overflow reported by Andres Gomez (Andres, Bernhard).
+- Fixed libpng deprication warnings (Bernhard).
+- Updated windows libraries: libpng 1.5.7, zlib 1.2.5, plib 1.8.5 (Bernhard).
+- Switched Windows VS 6 build to link with the multithreaded crt (Bernhard).
+- Added libraries for VS2008 build (Bernhard).
+- Developed/added VS 2008 project files (Bernhard).
 
 
 Changes since 1.3.1
@@ -153,22 +160,21 @@ Changes since 1.3.1
 - Adjusted graphics defaults to higher levels (FOV, skidmarks) (Bernhard).
 
 
-
 TODO for 1.3.2
 --------------
 - Some adoptions for gamepad calibration
-- Update libraries for Windows version (libpng, zlib, ...)
+- Update libraries for Windows version (libpng, zlib, ...), done for vs6, 2008 pending
 - check for sprintf/fscanf/strcpy, etc (ongoing).
 - Add VS2008 build
 - Review and eventually apply sparc patch
-- Review and eventually apply mac os x build
 
 
 TODO for 1.3.3
 --------------
-- Training session with adjustable setup
+- Training session with adjustable setup (trb)
 - Bugtracking
-- check for sprintf/fscanf/strcpy, etc (ongoing).
+- check for sprintf/fscanf/strcpy/strndup, etc (ongoing)
+  (ensure 0 termination of strings -> introduce string class?)
 
 
 TODO for 1.4.0
@@ -177,9 +183,9 @@ TODO for 1.4.0
 - Apply SDL patch from Brian Gavin (rescheduled to 1.4.0 to get to to test
   seriously).
 - Update OpenAL to 1.1, fix use of deprecated stuff.
-- Move from VC++ 6.0 to 9.0 (VS2008)
 - Car asignment for human players.
 - Sound (alut depricated/scheduling for lots of cars)
+- Review and eventually apply mac os x build
 
 
 TODO for Compliance
