--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -116,7 +116,11 @@ Changes since 1.3.1-test1
 - Developed/added VS 2008 project files (Bernhard).
 - Applied patch for OpenSolaris 2009.06, created by Andrey Sokolov (Andrey,
   Bernhard).
-- Fixed various gcc compiler warnings (Bernhard). 
+- Fixed various gcc compiler warnings (Bernhard).
+- Consider deadzone for analoge axis, e.g. wheels, joysticks, gamepads (Bernhard).
+- Fixed center calibration for steer axis (Bernhard).
+- Use plibjs instead of internal header (Bernhard).
+- Adopted available axis for controllers (Bernhard).
 
 
 Changes since 1.3.1
