--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -123,7 +123,8 @@ Changes since 1.3.1-test1
 - Adopted available axis for controllers (Bernhard).
 - Just update view once per 2 seconds simulation time (in blind mode) to avoid
   slowdown with graphics cards which are bad in buffer switching (e.g. ATI fglrx
-  driver on Linux) (Bernhard).
+  driver on Linux), this speeds up blind practice sessions as well a lot on other
+  graphics cards (Bernhard).
 
 
 Changes since 1.3.1
