--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -20,7 +20,7 @@ Linux Installation from Source
   on AMD64 if you run a 64 bit version of Linux. Be aware that maybe just
   1.8.5 works.
 - Untar the archive
-- cd into the torcs-1.3.1 directory
+- cd into the torcs-1.3.2 directory
 - ./configure (use --help for showing the options, of interest might be
   --enable-debug and --disable-xrandr).
 - make
@@ -43,7 +43,7 @@ Windows Installation from Source (Release version)
   version goes to "runtime" and the debug to "runtimed".
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1)
 - untar the archive into a path without whitespaces and special characters.
-- cd into the torcs-1.3.1 directory
+- cd into the torcs-1.3.2 directory
 - run setup_win32.bat
 - run setup_win32-data-from-CVS.bat
 - select the TORCS workspace (TORCS.dsw for VS 6) or solution (TORCS.sln
@@ -59,7 +59,7 @@ Windows Installation from Source (Debug version)
   version goes to "runtimed" and the release to "runtime".
 - requires VS 6 (tested with sp6) or VS 2008 (tested with sp1)
 - untar the archive into a path without whitespaces and special characters.
-- cd into the torcs-1.3.1 directory
+- cd into the torcs-1.3.2 directory
 - run setup_win32_debug.bat
 - run setup_win32-data-from-CVS_debug.bat
 - select the TORCS workspace (TORCS.dsw for VS 6) or solution (TORCS.sln
@@ -89,7 +89,12 @@ Have fun, bye
 Bernhard.
 
 
-Changes since 1.3.1-test1
+Changes since 1.3.2-test2
+-------------------------
+- Added wheel texture for car1-ow1 for simple wheel rendering mode (Bernhard).
+
+
+Changes since 1.3.2-test1
 -------------------------
 - Added menu music code (finally!!!) (Bernhard).
 - Composed and added a menu song (Bernhard).
@@ -173,10 +178,7 @@ Changes since 1.3.1
 
 TODO for 1.3.2
 --------------
-- Update libraries for Windows version (libpng, zlib, ...), done for vs6, 2008 pending
-- check for sprintf/fscanf/strcpy, etc (ongoing).
-- Add VS2008 build
-- Review and eventually apply sparc patch
+- Update docs, installer, etc
 
 
 TODO for 1.3.3
