--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -92,6 +92,9 @@ Bernhard.
 Changes since 1.3.2-test2
 -------------------------
 - Added wheel texture for car1-ow1 for simple wheel rendering mode (Bernhard).
+- Fixed simuv2 Makefile, parallel builds are now possible in Posix systems
+  (e.g. MAKE="make -j 8" make). Because libsolid is a static library it must be
+  built before simuv2, defined explicit dependency (Bernhard).
 
 
 Changes since 1.3.2-test1
@@ -219,7 +222,6 @@ Later:
   side under OpenAL (2.0).
 - Add valgrind option to "torcs".
 - Include suppressions file for valgrind.
-- (Fix parallel build with make -j n, breaks currently in SOLID) (Bernhard).
 - Ongoing for every release: rework free car models (several holes, no
   emmissive color of lod (model becomes dark at a certain distance), single
   sided, add cockpit, lods).
@@ -239,11 +241,6 @@ Later:
 - (Problem when driver list changes during championship.)
 - (add proper init/shutdown to every module which is not bound to anything else
   but the loading/init/shutdown/unloading process.)
-- (make use of pbuffers to render trackmap if available.)
-- Update FAQ
-  "mencoder -ovc lavc -lavcopts vcodec=mpeg4:vhq:vbitrate=1800 \*.jpg -mf on:type=jpeg:fps=25"
-  the backslash got swallowed by the CMS.
-
 
 
 TODO for 1.9.x (pre 2.0 series, no release)
