--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -95,6 +95,9 @@ Changes since 1.3.2
 - Added race schedule "wizard" to trb, championships are much quicker to set up
   (Bernhard).
 - Little trb improvements (Bernhard).
+- Created/added new wheels for stock cars (Bernhard).
+- Created/added new stock car category (Bernhard).
+- Created/added new stock car (Bernhard).
 
 
 TODO for 1.3.3
@@ -107,7 +110,6 @@ TODO for 1.3.3
 
 TODO for 1.4.0
 --------------
-- Rename *ascar category/car (get rid of *acsar)
 - Apply SDL patch from Brian Gavin (rescheduled to 1.4.0 to get to to test
   seriously).
 - Update OpenAL to 1.1, fix use of deprecated stuff.
@@ -121,7 +123,6 @@ TODO for Compliance
 155-DTM -> replace with car8-trb1
 acura -> replace with car9-trb1
 mc-larenf1 -> replace with car10-trb1
-nascar -> replace with car1-stock1 (would be nice to have ~5 different cars)
 p406 -> replace with car1-trb4
 
 
