--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -100,6 +100,8 @@ Changes since 1.3.2
 - Created/added new stock car (Bernhard).
 - Created/added textures for drivers of the new stock car, berniw 1, berniw 2,
   bt 1, bt 2, reconfigured drivers to use this car (Bernhard).
+- Replaced more sprintf's (Bernhard).
+- Fixed some gcc 4.6 warnings (not yet all though) (Bernhard).
 
 
 TODO for 1.3.3
