--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -102,6 +102,8 @@ Changes since 1.3.2
   bt 1, bt 2, reconfigured drivers to use this car (Bernhard).
 - Replaced more sprintf's (Bernhard).
 - Fixed some gcc 4.6 warnings (not yet all though) (Bernhard).
+- Removed *ascar category and car (stock1 is the replacement) (Bernhard).
+- Adopted Windows ports/project files to the changes (Bernhard).
 
 
 TODO for 1.3.3
