--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -107,14 +107,17 @@ Changes since 1.3.2
 - trb car users can now choose from all trb wheels (Bernhard).
 - minor setup adjustments for trb cars (suspension can extend a tad more)
   (Bernhard).
-- Now you can run races in command line mode (e.g. useful for AI training),
-  e.g. run "~/torcs_bin/bin/torcs -r ~/.torcs/config/raceman/dtmrace.xml"
+- Now you can run races in command line mode (e.g. useful for AI training and
+  automated testing), e.g. run
+  "~/torcs_bin/bin/torcs -r ~/.torcs/config/raceman/dtmrace.xml"
   (or on Windows e.g. "wtorcs.exe -r config/raceman/dtmrace.xml").
-  The new -r option takes an ordinary race configuration, you can set it up
+  The new -r option takes an ordinary race configuration file, you can set it up
   as usual with the TORCS GUI or edit it manually/generate it. Human drivers
   are not allowed of course. (Bernhard)
 - Added track "Corkscrew", created by Gabor Kmetyko and Andrew Sumner
   (Gabor, Andrew, Bernhard).
+- Added track "Brondehach", created by Andrew Sumner, "Milestone" and Eckhard
+  Jaeger (Andrew, Milestone, Eckhard, Bernhard).
 
 
 
