--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -101,44 +101,23 @@ Have fun, bye
 Bernhard.
 
 
-Changes since 1.3.2
+Changes since 1.3.3
 -------------------
-- Adopted trb for newer PHP (>= 5.2) versions (Bernhard).
-- Added race schedule "wizard" to trb, championships are much quicker to set up
+- Fixed wrong map rendering when window was scaled/not fully filled, reported by
+  racer14 (Dan Nace) on the TRB (Dan, Bernhard).
+- Fixed a label positioning problem when extra long strings are drawn into the
+  same label in every timestep (Bernhard).
+- Added rule: If the car touches a wall during a best lap, is not counted any more
+  as fastest lap (to avoid using walls on alpine-2 etc. for qualifying times),
+  inspired by this discussion: http://berniw.org/trb/forum/showthread.php?topicid=3272
   (Bernhard).
-- Little trb improvements (Bernhard).
-- Created/added new wheels for stock cars (Bernhard).
-- Created/added new stock car category (Bernhard).
-- Created/added new stock car (Bernhard).
-- Created/added textures for drivers of the new stock car, berniw 1, berniw 2,
-  bt 1, bt 2, reconfigured drivers to use this car (Bernhard).
-- Replaced more sprintf's (Bernhard).
-- Fixed some gcc 4.6 warnings (not yet all though) (Bernhard).
-- Removed *ascar category and car (stock1 is the replacement) (Bernhard).
-- Adopted Windows ports/project files to the changes (Bernhard).
-- trb car users can now choose from all trb wheels (Bernhard).
-- minor setup adjustments for trb cars (suspension can extend a tad more)
-  (Bernhard).
-- Now you can run races in command line mode (e.g. useful for AI training and
-  automated testing), e.g. run
-  "~/torcs_bin/bin/torcs -r ~/.torcs/config/raceman/dtmrace.xml"
-  (or on Windows e.g. "wtorcs.exe -r config/raceman/dtmrace.xml").
-  The new -r option takes an ordinary race configuration file, you can set it up
-  as usual with the TORCS GUI or edit it manually/generate it. Human drivers
-  are not allowed of course. (Bernhard)
-- Added track "Corkscrew", created by Gabor Kmetyko and Andrew Sumner
-  (Gabor, Andrew, Bernhard).
-- Added track "Brondehach", created by Andrew Sumner, "Milestone" and Eckhard
-  Jaeger (Andrew, Milestone, Eckhard, Bernhard).
-- Fixed another possible buffer overflow reported by Andres Gomez
-  (Andres, Bernhard).
-- Fixed #2838393 as suggested by David Zimmerman (added seconds to result file
-  name) (David, Bernhard).
-- Updated the FAQ regarding new command line mode and other questions (Bernhard).
-- Updated installer/version number etc. (Bernhard)
+- Added rule: When cutting a corner during a best lap, the lap is not counted anymore as
+  fastest lap. Cutting a corner is if the center of gravity is 0.7*carwidth outside of
+  the main track segment in the turn inside, so on straights or on the turn outside you
+  canstill leave the track, pit entries and exits count as well as track (Bernhard).
 
 
-TODO for 1.3.4
+TODO for 1.3.5
 --------------
 - Training session with adjustable setup (trb)
 - Bugtracking
