--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -114,7 +114,12 @@ Changes since 1.3.3
 - Added rule: When cutting a corner during a best lap, the lap is not counted anymore as
   fastest lap. Cutting a corner is if the center of gravity is 0.7*carwidth outside of
   the main track segment in the turn inside, so on straights or on the turn outside you
-  canstill leave the track, pit entries and exits count as well as track (Bernhard).
+  can still leave the track, pit entries and exits count as well as track (Bernhard).
+- Restricted new rules to practice and qualifying (Bernhard).
+- Timewarp goes now up to 128x real time, to keep the GUI responsive at least on
+  every 2000th timestep a frame is rendered, it does not accumulate time anymore,
+  so the slowdown commands are more responsive (Bernhard).
+
 
 
 TODO for 1.3.5
