--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -121,10 +121,11 @@ Changes since 1.3.3
   so the slowdown commands are more responsive (Bernhard).
 - Fixed ordering issue when two drivers have the same qualifying time, the first runner
   should now be always on top (Bernhard).
+- Added more damage when scratching parallel to the wall (Bernhard).
 
 
 
-TODO for 1.3.5
+TODO for 1.3.4
 --------------
 - Training session with adjustable setup (trb)
 - Bugtracking
