--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -122,6 +122,8 @@ Changes since 1.3.3
 - Fixed ordering issue when two drivers have the same qualifying time, the first runner
   should now be always on top (Bernhard).
 - Added more damage when scratching parallel to the wall (Bernhard).
+- Applied OpenAl linkage patch provided by Paletta (Paletta, Bernhard).
+- Got rid of more gcc 4.6 warnings, just 2 left (Bernhard).
 
 
 
