--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -104,6 +104,7 @@ Bernhard.
 Changes since 1.3.4-test1
 -------------------------
 - Added search facility to TRB (Bernhard).
+- Added hall of fame to TRB (Bernhard).
 
 
 Changes since 1.3.3
