--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -32,6 +32,7 @@ Command line arguments:
 * -l list the dynamically linked libraries
 * -d run under gdb and print stack trace on exit, makes most sense when compile
      with --enable-debug
+* -g run under valgrind (requires a debug build for useful results)
 * -e display the commands to issue when you want to run under gdb
 * -s disable multitexturing, important for older graphics cards
 * -m use X mouse cursor and do not hide it during races
@@ -105,6 +106,7 @@ Changes since 1.3.4-test1
 -------------------------
 - Added search facility to TRB (Bernhard).
 - Added hall of fame to TRB (Bernhard).
+- Added command line option to run under valgrind (-g) (Bernhard).
 
 
 Changes since 1.3.3
@@ -167,8 +169,6 @@ Later:
   ps3 controller buttons l2/r2)
 - When car is moving sideways, the engine sound source seems shifted to the
   side under OpenAL (2.0).
-- Add valgrind option to "torcs".
-- Include suppressions file for valgrind.
 - Ongoing for every release: rework free car models (several holes, no
   emmissive color of lod (model becomes dark at a certain distance), single
   sided, add cockpit, lods).
