--- a/torcs/torcs/README
+++ b/torcs/torcs/README
@@ -107,6 +107,17 @@ Changes since 1.3.4-test1
 - Added search facility to TRB (Bernhard).
 - Added hall of fame to TRB (Bernhard).
 - Added command line option to run under valgrind (-g) (Bernhard).
+- Fixed tiny memory leak (module info was not released) (Bernhard).
+- Fixed tiny memory leak (carname for results not released (Bernhard).
+- Adopted human.cpp to work with mem leak fixes (because of releasing
+  memory now human.cpp would crash) (Bernhard).
+- Fixed small memory leak in solid, just significant for tracks with
+  pit walls (Bernhard).
+- Added command line option "-k" (keep) to supress the execution of dlclose
+  (useful for valgrind runs to get symbol information instead of ??)
+  (Bernhard).
+
+
 
 
 Changes since 1.3.3
